[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/chewy_font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/chewy_font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://screens/settings.gd" type="Script" id=3]
[ext_resource path="res://assets/sound_music/PeriTune-Gothic_Cute_inst.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sound_fx/jump.ogg" type="AudioStream" id=5]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0196078, 0.247059, 1 )

[node name="lblTitle" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0.243137, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1

[node name="C" type="VBoxContainer" parent="."]
margin_left = 92.0
margin_top = 210.0
margin_right = 1838.0
margin_bottom = 902.0

[node name="DisplayName" type="HBoxContainer" parent="C"]
modulate = Color( 0.305882, 0.305882, 0.305882, 0.521569 )
margin_right = 1746.0
margin_bottom = 89.0

[node name="lblDisplayName" type="Label" parent="C/DisplayName"]
margin_top = 4.0
margin_right = 750.0
margin_bottom = 84.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_DisplayName"

[node name="editDisplayName" type="LineEdit" parent="C/DisplayName"]
margin_left = 754.0
margin_right = 1554.0
margin_bottom = 89.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = ExtResource( 1 )
text = "DisplayName"
editable = false
clear_button_enabled = true

[node name="Language" type="HBoxContainer" parent="C"]
margin_top = 93.0
margin_right = 1746.0
margin_bottom = 178.0

[node name="lblLanguage" type="Label" parent="C/Language"]
margin_top = 2.0
margin_right = 750.0
margin_bottom = 82.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_Language"

[node name="btnLanguage" type="Button" parent="C/Language"]
margin_left = 754.0
margin_right = 1554.0
margin_bottom = 85.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = ExtResource( 1 )

[node name="listLanguage" type="ItemList" parent="C/Language"]
visible = false
margin_left = 754.0
margin_right = 1554.0
margin_bottom = 85.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = ExtResource( 1 )
items = [ "english", null, false, "deutsch", null, false, "français", null, false, "español", null, false ]
allow_reselect = true
auto_height = true

[node name="VolumeMaster" type="HBoxContainer" parent="C"]
margin_top = 182.0
margin_right = 1746.0
margin_bottom = 262.0

[node name="lblVolumeMaster" type="Label" parent="C/VolumeMaster"]
margin_right = 750.0
margin_bottom = 80.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_VolumeMaster"

[node name="sliderMaster" type="HSlider" parent="C/VolumeMaster"]
margin_left = 754.0
margin_right = 1354.0
margin_bottom = 80.0
rect_min_size = Vector2( 600, 80 )
max_value = 1.0
step = 0.05
value = 0.8
tick_count = 10
ticks_on_borders = true

[node name="VolumeMusic" type="HBoxContainer" parent="C"]
margin_top = 266.0
margin_right = 1746.0
margin_bottom = 346.0

[node name="lblVolumeMusic" type="Label" parent="C/VolumeMusic"]
margin_right = 750.0
margin_bottom = 80.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_VolumeMusic"

[node name="sliderMusic" type="HSlider" parent="C/VolumeMusic"]
margin_left = 754.0
margin_right = 1354.0
margin_bottom = 80.0
rect_min_size = Vector2( 600, 80 )
max_value = 1.0
step = 0.05
value = 0.8
tick_count = 10
ticks_on_borders = true

[node name="VolumeSound" type="HBoxContainer" parent="C"]
margin_top = 350.0
margin_right = 1746.0
margin_bottom = 430.0

[node name="lblVolumeSound" type="Label" parent="C/VolumeSound"]
margin_right = 750.0
margin_bottom = 80.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_VolumeSound"

[node name="sliderSound" type="HSlider" parent="C/VolumeSound"]
margin_left = 754.0
margin_right = 1354.0
margin_bottom = 80.0
rect_min_size = Vector2( 600, 80 )
max_value = 1.0
step = 0.05
value = 0.8
tick_count = 10
ticks_on_borders = true

[node name="Graphics" type="HBoxContainer" parent="C"]
margin_top = 434.0
margin_right = 1746.0
margin_bottom = 519.0

[node name="btnGraphics" type="Button" parent="C/Graphics"]
margin_right = 750.0
margin_bottom = 85.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_Graphics"

[node name="lblToggleGraphics" type="Label" parent="C/Graphics"]
margin_left = 754.0
margin_top = 2.0
margin_right = 1504.0
margin_bottom = 82.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "\"ToggleGraphics\""

[node name="Hints" type="HBoxContainer" parent="C"]
margin_top = 523.0
margin_right = 1746.0
margin_bottom = 608.0

[node name="btnShowHints" type="Button" parent="C/Hints"]
margin_right = 750.0
margin_bottom = 85.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "Settings_ShowHints"

[node name="lblToggleHints" type="Label" parent="C/Hints"]
margin_left = 754.0
margin_top = 2.0
margin_right = 1504.0
margin_bottom = 82.0
rect_min_size = Vector2( 750, 80 )
custom_fonts/font = ExtResource( 1 )
text = "\"ToggleHints\""

[node name="btnCancel" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -170.0
margin_right = -102.0
margin_bottom = -50.0
rect_min_size = Vector2( 400, 120 )
custom_fonts/font = ExtResource( 1 )
text = "CANCEL"

[node name="btnOkay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 102.0
margin_top = -170.0
margin_right = 502.0
margin_bottom = -50.0
rect_min_size = Vector2( 400, 120 )
custom_fonts/font = ExtResource( 1 )
text = "OK"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="visibility_changed" from="." to="." method="_on_Settings_visibility_changed"]
[connection signal="text_changed" from="C/DisplayName/editDisplayName" to="." method="_on_editDisplayName_text_changed"]
[connection signal="pressed" from="C/Language/btnLanguage" to="." method="_on_btnLanguage_pressed"]
[connection signal="item_selected" from="C/Language/listLanguage" to="." method="_on_listLanguage_item_selected"]
[connection signal="value_changed" from="C/VolumeMaster/sliderMaster" to="." method="_on_sliderMaster_value_changed"]
[connection signal="value_changed" from="C/VolumeMusic/sliderMusic" to="." method="_on_sliderMusic_value_changed"]
[connection signal="value_changed" from="C/VolumeSound/sliderSound" to="." method="_on_sliderSound_value_changed"]
[connection signal="pressed" from="C/Graphics/btnGraphics" to="." method="_on_btnGraphics_pressed"]
[connection signal="pressed" from="C/Hints/btnShowHints" to="." method="_on_btnShowHints_pressed"]
[connection signal="pressed" from="btnCancel" to="." method="_on_btnCancel_pressed"]
[connection signal="pressed" from="btnOkay" to="." method="_on_btnOkay_pressed"]
